--- a/timeline.css
+++ b/timeline.css
@@ -38,7 +38,7 @@
 .story-profile-pic {
     width: 56px;
     height: 56px;
-    object-fit: contain;
+    object-fit: cover;
 
     border-radius: 56px;
     border: solid 2px rgb(255, 255, 255);
@@ -90,6 +90,7 @@
 .post-profile-pic {
     width: 32px;
     height: 32px;
+    object-fit: cover;
     border-radius: 32px;
     border: solid 2px rgb(255, 255, 255);
 }
@@ -178,6 +179,31 @@
     color: rgb(163, 163, 163);
 }
 
+.whole-comment {
+    font-size: 14px;
+    flex-direction: column;
+}
+
+.comment-username {
+    margin-block: 6px;
+    padding-right: 6px;
+}
+
+.comment-space-b {
+    justify-content: space-between;
+}
+
+.comment-text {
+    margin-block: 6px;
+}
+
+.little-like {
+    width: 18px;
+    height: 18px;
+    padding-inline: 10px;
+    cursor: pointer;
+}
+
 .post-translation {
     color: black;
     font-size: 14px;
@@ -222,10 +248,20 @@
 }
 
 .post-comment-btn {
-    color: #B3DFFC;
+    color: #0099ff;
     font-weight: 600;
-    padding-inline: 16px;
+    margin: 8px;
+    padding: 8px;
     cursor: pointer;
+    background-color: rgb(250, 250, 250);
+    border: none;
+    border-radius: 5px;
+    transition: 100ms ease-in-out;
+}
+
+.post-comment-btn:hover {
+    color: rgb(250, 250, 250);
+    background-color: #0099ff;
 }
 
 /*///////////////////////////////////////////////////////////////////////*/
@@ -233,7 +269,7 @@
 .profiles {
     width: 40%;
     margin-top: 36px;
-    justify-content: center;
+    flex-direction: column;
 }
 
 .profiles-container {
